src/objects/AccountingIntegrationJob__c.object
<CustomObject>
    <fields>
        <fullName>notes__c</fullName>
        <label>Notes</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not Started</fullName>
                    <default>true</default>
                    <label>Not Started</label>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>On Hold</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>transactionFileId__c</fullName>
        <label>Transaction File Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>transactionFileLoaded__c</fullName>
        <defaultValue>false</defaultValue>
        <description>System field for tracking when the accounting transaction file has been uploaded.</description>
        <label>Transaction File Loaded</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>transactionFileName__c</fullName>
        <label>Transaction File Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Accounting Integration Job</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>status__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>AIJ-{0000000000}</displayFormat>
        <label>Accounting Integration Job Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Accounting Integration Jobs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>